--- a/thereseWebPage.UserInterface/wwwroot/index.html
+++ b/thereseWebPage.UserInterface/wwwroot/index.html
@@ -13,8 +13,12 @@
     <script src="views/blog.js"></script>
     <script src="views/feedback.js"></script>
     <script src="views/projects.js"></script>
-
+    <script src="admin/controllers/blogController.js"></script>
+    <script src="admin/controllers/projectController.js"></script>
+    <script src="admin/view/blogView.js"></script>
+    <script src="admin/view/projectView.js"></script>
     <script src="controller/feedbackController.js"></script>
+    <link href="adminIndex.html" />
 
 </head>
 <body>
